@@ -382,8 +382,7 @@ class navigator:
         self.addDirectoryItem(32050, 'clearSources', 'tools.png', 'DefaultAddonProgram.png')
         self.addDirectoryItem(32052, 'clearCache', 'tools.png', 'DefaultAddonProgram.png')
         self.addDirectoryItem(32611, 'clearAllCache', 'tools.png', 'DefaultAddonProgram.png')
-        self.addDirectoryItem(32108, 'cleanOathSettings', 'tools.png', 'DefaultAddonProgram.png')
-        self.addDirectoryItem(32109, 'cleanOathscrapersSettings', 'tools.png', 'DefaultAddonProgram.png')
+        self.addDirectoryItem(32108, 'cleanSettings', 'tools.png', 'DefaultAddonProgram.png')
         self.addDirectoryItem(32079, 'oathscrapersettings', 'icon.png', 'DefaultAddonProgram.png')
         if not control.condVisibility('System.HasAddon(script.module.openscrapers)'):
             self.addDirectoryItem('[B]Openscrapers[/B] : Install', 'installOpenscrapers', 'openscr.png', 'DefaultAddonProgram.png')
