@@ -230,7 +230,9 @@ def _is_cache_valid(cached_time, cache_timeout):
 
 def cache_version_check():
     if _find_cache_version():
-        cache_clear(); cache_clear_meta(); cache_clear_providers()
+        cache_clear()
+        cache_clear_providers()
+        control.execute('RunPlugin(plugin://%s)' % 'plugin.video.theoath/?action=cleanSettings')
         control.infoDialog(control.lang(32057).encode('utf-8'), sound=True, icon='INFO')
 
 
